2010-09-22  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Chris Fleizach.

        [Gtk] Incorrect exposure of list items whose children are elements
        https://bugs.webkit.org/show_bug.cgi?id=45383

        Check that list items will be always exposed like that for GTK

        * platform/gtk/accessibility/list-items-always-exposed-expected.txt: Added.
        * platform/gtk/accessibility/list-items-always-exposed.html: Added.
2010-09-22  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Chris Fleizach.

        [Gtk] Incorrect exposure of list items whose children are elements
        https://bugs.webkit.org/show_bug.cgi?id=45383

        Set ATK_ROLE_LIST_ITEM looking for the role of the parent object

        Test: platform/gtk/accessibility/list-items-always-exposed.html

        * accessibility/gtk/AccessibilityObjectAtk.cpp:
        (WebCore::AccessibilityObject::accessibilityPlatformIncludesObject):
        Always include objects with ListItemRole in accessibility for GTK.
        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (getInterfaceMaskFromObject): Add some specific code to handle the
        special case of list markers by implementing AtkText when needed.

Canonical link: https://commits.webkit.org/58725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68023 268f45cc-cd09-0410-ab3c-d52691b4dbfc