WebCore/accessibility/gtk/AccessibilityObjectAtk.cpp
@@ -73,8 +73,12 @@ AccessibilityObjectInclusion AccessibilityObject::accessibilityPlatformIncludesO
     if (role == StaticTextRole)
         return IgnoreObject;
 
+    // Include all list items, regardless they have or not inline children
+    if (role == ListItemRole)
+        return IncludeObject;
+
     // Bullets/numbers for list items shouldn't be exposed as AtkObjects.
-    if (roleValue() == ListMarkerRole)
+    if (role == ListMarkerRole)
         return IgnoreObject;
 
     return DefaultBehavior;
